LPS-71532 Fix CSS to avoid icon overlapping

--- a/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/_form-builder-field-settings.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/_form-builder-field-settings.scss
@@ -106,6 +106,10 @@
 	.liferay-ddm-form-field-key-value {
 		margin-bottom: 20px;
 
+		.form-control {
+			padding-right: 30px;
+		}
+
 		.help-block {
 			height: 22px;
 			position: relative;
