--- a/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/_general.scss
+++ b/modules/apps/forms-and-workflow/dynamic-data-lists/dynamic-data-lists-form-web/src/main/resources/META-INF/resources/admin/css/_general.scss
@@ -15,7 +15,7 @@
 }
 
 .liferay-ddl-form-builder-rule-builder .form-builder-select-field {
-	min-width: 200px;
+	width: 200px;
 }
 
 .liferay-ddl-form-builder-rule-builder-content .text-default {
